[tool.poetry]
name = "litmelon"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.scripts]
litmelon = "litmelon.main:main"
lotus-sim = "litmelon.lotus.simulation:main"

[tool.poetry.dependencies]
python = "^3.11"

gpiozero = "1.6.2"
numpy = "1.25.1"
soundfile = "0.12.1"
sounddevice = "0.4.6"
typer = "0.9.0"

[tool.poetry.dev-dependencies]
black = { version = "23.7.0", extras = ["d"] }
isort = "5.12.0"
matplotlib = "3.7.2"
hexalattice = "1.3.0"

[tool.isort]
profile = "black"
known_first_party = ["litmelon"]
